<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zero Events</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_connect">Connect</string>
    <string name="title_settings">Settings</string>

    <string name="hello_home_fragment">Home Fragment</string>
    <string name="hello_explore_fragment">Explore Fragment</string>
    <string name="hello_connect_fragment">Connect Fragment</string>
    <string name="hello_settings_fragment">Settings Fragment</string>

    <string name="hint_email">Enter Email</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_first">Enter First Name</string>
    <string name="hint_last">Enter Last Initial</string>
    <string name="hint_password">Enter Password</string>

    <string name="createAccBut">Create Account ...</string>
    <string name="title_activity_location">Location</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="connect_navigation_selected">Connect Navigation Selected</string>
    <string name="you_are_now_logged_in">YOU ARE NOW LOGGED IN:</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_initial">Last Initial</string>
    <string name="email">Email</string>
    <string name="log_out">LOG OUT</string>
    <string name="textview">TextView</string>
    <string name="notif_option">TextView</string>
    <string name="checkbox">CheckBox</string>
    <string name="about_us">About Us</string>


    <!--Example settings for Movie Activity-->

    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in_button">LOG IN</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="not_now_textview"><u>Not now, sign in later ...</u></string>
    <string name="oop_sorry">Oops â€¦ No video available!</string>

    <string name="popularity_text">Popularity â€¦</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="not_hot">NOT HOT!</string>
    <string name="warm">WARM!</string>
    <string name="hot">HOT!</string>
    <string name="hot_hot_hot">HOT HOT HOT!!!</string>

    <string name="logged_in">YOU ARE LOGGED IN ...</string>


    <!--Google Maps-->
    <string name="google_maps_API_key">AIzaSyADxo1xLfXzmCCsvd96eAF0qUM6Vsh_MbQ</string>

</resources>

