<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_first"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/lastInitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_last"
        android:inputType="textCapCharacters"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="112dp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccBut"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="309dp" />
</LinearLayout>